# arnold_problem

additions/arn_util/: CMakeLists.txt  arn_utils_config.json  bits.hpp  blocking_queue.hpp  conf.hpp  db.cpp  db.hpp  graceful_stop.cpp  graceful_stop.hpp  main.cpp  omatrix.cpp  omatrix.hpp  run_config.cpp  run_config.hpp  thread_pool.hpp
additions/biggraph_viewer/: main.cpp
additions/java/: pom.xml
additions/linGrad/: CMakeLists.txt  main.cpp
additions/linGrad3/: CMakeLists.txt  linGrad3.cpp
additions/linearization/: tetris.lua
additions/lua_svg/: main.cpp
additions/midcount/: main.cpp
additions/scripts/: base.lua  check_sym.bat  check_sym.lua  cm.lua  lines.lua  sph.lua  svg_test.lua  umat.lua
additions/stats/: AllConfsStatistics.md
additions/tests/: 7tdc.txt  AAA.PAS  ou.c
additions/unique/: main.cpp
additions/visualization/: game2.html  lines_tangent_to_hypocycloid.html  parse.html  tangent_family_visualizer.html  tangent_family_visualizer.js
branches/borost/: OPTIMIZATIONS_LOG.md  OPTIMIZATIONS_TODO.md  p3_maximal_v10.c  p3_maximal_v11.c  p3_maximal_v11_explained.md  p3_maximal_v9.c  p3_maximal_v9.py  p3_maximal_v9_explained.md
branches/cm/: main.c
branches/even/: super2.c
branches/midcount/: main.c
branches/mpi/: main.c
branches/mpi_even/: main.c
branches/mpi_odd/: .gitignore  Makefile  dispatcher.c  dispatcher.h  lib.c  lib.h  logic.c  logic.h  main.c  messaging.h  worker.c  worker.h
branches/mpi_priority/: main.c
branches/mpi_sort/: main.c
branches/odd/: defectless-d2-2.c  defectless-d2.c  (+11 more)
generators/: 11-0.txt  16-4.txt
(+306 files in other folders)
